Создан стор, для избранных слов, рефакторинг стилей и отображения списков слов, в компоненте избранных слов реализован поиск, в том числе и по частям речи

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -36,3 +36,26 @@ a {
   text-decoration: none;
   cursor: pointer;
 }
+
+.blue-class-words {
+  color: blue;
+  font-size: 18px;
+
+  svg {
+    margin: 0 0 0 20px !important;
+  }
+}
+
+.red-class-words {
+  color: red;
+  font-size: 18px;
+
+  svg {
+    margin: 0 0 0 20px !important;
+  }
+}
+
+.empty-list {
+  width: 100%;
+  text-align: center;
+}
